dependency: ViewPagerIndicator and Custom Gradle Support

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app'
+include ':app', ':library', ':Android-ViewPagerIndicator'
+project(':library').projectDir = new File('Android-ViewPagerIndicator/library')
